# python-taiga

./: .bumpversion.cfg  .codeclimate.yaml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  AUTHORS.txt  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  demo.py  generate_docs.sh  pyproject.toml  requirements-test.txt  requirements.txt  runtests.sh  setup.cfg  setup.py  tasks.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: debian_package.yml  lint.yml  test.yml
changes/: 100.feature  103.feature  105.bugfix  111.bugfix  113.feature  114.bugfix  116.bugfix  117.bugfix  124.feature  130.bugfix  131.feature  134.bugfix  140.feature  149.bugfix  161.feature  162.feature  166.feature  169.bugfix  183.feature  185.bugfix  190.bugfix  196.bugfix  227.bugfix  55.feature  59.feature  97.bugfix
debian/: changelog  control  copyright  rules
docs/: Makefile  api.rst  conf.py  development.rst  index.rst  models.rst  usage.rst
taiga/: __init__.py  client.py  exceptions.py  requestmaker.py  utils.py
taiga/models/: __init__.py  base.py  models.py
tests/: test_auth.py  test_auth_app.py  test_cache.py  test_custom_attributes.py  test_epics.py  test_exceptions.py  test_history.py  test_issue_statuses.py  test_issue_types.py  test_issues.py  test_memberships.py  test_milestones.py  test_model_base.py  test_points.py  test_priorities.py  test_projects.py  test_requestmaker.py  test_roles.py  test_search.py  test_severities.py  test_swimlanes.py  test_task_statuses.py  test_tasks.py  test_user_stories.py  test_users.py  test_userstories.py  test_userstory_statuses.py  test_webhooks.py  test_wikilinks.py  test_wikipages.py  tools.py
tests/resources/: auth_app_success.json  auth_refresh_token_success.json  auth_user_success.json  epic_details_success.json  epics_list_success.json  fake_objects.json  fakes_list_success.json  history_success.json  issue_customattr_details_success.json  issue_customattr_success.json  issue_details_success.json  issues_list_success.json  milestone_details_success.json  milestones_list_success.json  project_details_success.json  project_details_success_no_swimlanes.json  projects_list_success.json  projects_resolve_issue.json  projects_resolve_task.json  projects_resolve_us.json  search_success.json  starred_projects.json  task_details_success.json  tasks_list_success.json  user_details_success.json  userstories_list_success.json  userstory_details_success.json
