[bumpversion]
current_version = 0.9.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
    {major}.{minor}.{patch}.{release}{relver}
    {major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
    dev
    a
    b
    rc
    gamma

[bumpversion:file:taiga/__init__.py]

[metadata]
name = python-taiga
version = attr: taiga.__version__
url = https://github.com/nephila/python-taiga
author = Nephila
author_email = team@team.nephila.digital
description = Taiga python API
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
keywords = taiga kanban wrapper api
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
install_requires =
    requests>2.11
    six>=1.9
    python-dateutil>=2.4
    pyjwkest>=1.0
packages = taiga
python_requires = >=3.6
setup_requires =
	setuptools
zip_safe = False
test_suite = tests

[options.package_data]
* = *.txt, *.rst
taiga = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	sphinx

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
