[metadata]
name = python-taiga
version = attr: taiga.__version__
url = https://github.com/nephila/python-taiga
author = Nephila
author_email = team@team.nephila.digital
description = Taiga python API
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
keywords = taiga kanban wrapper api
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
    requests>2.11
    six>=1.9
    python-dateutil>=2.4
packages = taiga
python_requires = >=3.7
setup_requires =
	setuptools
zip_safe = False
test_suite = tests

[options.package_data]
* = *.txt, *.rst
taiga = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
docs =
	sphinx
    sphinx-rtd-theme

[sdist]
formats = zip

[bdist_wheel]
universal = 1
